smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/walrus-operator-in-node.smithy
// Syntax error at line 5, column 13: Expected COLON(':') but found WALRUS(':=') | Model
$version: "2.0"

metadata foo = {
    inlined := {}
}

namespace smithy.example
